--- a/genai-usecases/llms/llama-4/.env
+++ b/genai-usecases/llms/llama-4/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY="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"
-GOOGLE_API_KEY="AIzaSyAGNZqn1xFm-CV-1vEWfR5oR7Jg8ZhI8Ys"
+GROQ_API_KEY=your_api_key
+GOOGLE_API_KEY=your_api_key
